# store-monitoring

./: .env.template  .gitignore  README.md  pyproject.toml  server.sh  testing.py
.github/workflows/: production.yml
docker/: dockerfile
docker/local/: docker-compose.yml
docker/production/: docker-compose.yml
stor/: __main__.py  config.py  db.py  report.py
stor/api/: grapphing.py  main.py
stor/api/templates/: bokeh.html
stor/data/: clean_data.py  get_data.py
stor/db/: __init__.py  functions.py
